# termusix

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/actions/common-setup/: action.yaml
.github/workflows/: ci-mac-arm.yml  ci-mac-intel.yml  flakehub-publish-tagged.yml  nix-build.yml  publish.yml  scoop-build.yml
nix/: common.nix  cross-build.nix  docker_build.nix  homebrew-package.nix  pkgbuild.nix  scoop-appmanifest.nix  tar-package.nix  window-build.nix
nix/pkgs/: default.nix
scripts/: export-linux-bin.sh  pack_homebrew.sh
src/: download.rs  file_ops.rs  main.rs  music.rs  music_func.rs  playback.rs  playlist.rs  user_interface.rs  utils.rs
src/file_song/: file_explorer.rs  mod.rs  widget.rs
src/file_song/input/: mod.rs
src/music_func/: download.rs  music_util.rs
src/music_func/download/: convert.rs
src/playlist/: delete_playlist.rs  list_music.rs  save_local.rs  save_playlist.rs
src/user_interface/: app.rs  cursor.rs  event.rs  handler.rs  tui.rs
src/user_interface/app/: app_state.rs  cwd_dirs.rs  music_list.rs  screen.rs  state_play.rs  tabs_playlist.rs  ui.rs  widget_list_add.rs  widget_playback_buttons.rs
src/user_interface/app/ui/: footer_components.rs  music_list_components.rs  now_playing.rs  playback_component.rs  playlist_components.rs  pop_up.rs
src/user_interface/app/ui/pop_up/: add_music_widget.rs  help_popup.rs  list_folder_add.rs  pop_up_plylist.rs
src/user_interface/handler/: handle_confirm.rs  handle_d.rs  handle_enter.rs  handle_left_right.rs  handle_space.rs  handle_up_down.rs  insert_playlist_song.rs  play.rs  pop_song_hanlde.rs
src/utils/: convert.rs  rand.rs
