[package]
name = "termusix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features= false }
rusty_ytdl = { version = "0.7.3", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
