[package]
name = "termusix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features= false }
rodio = "0.19.0"
rusty_ytdl = { version = "0.7.3", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = {version = "0.27.0", features= ["unstable-widget-ref"]}
indexmap = { version = "2.2.6", features = ["serde"] }
tui-input = "0.9.0"
derivative = "2.2"

[profile.release]
strip = true
opt-level = "s"
lto  = true
codegen-units = 1

[lints.clippy]
single_match = "allow"
